# aps-cpsat

./: .env.example  .gitignore  README.md  _backup_builder.py  _fix_indent.py  _hotspot_out.txt  _run_smoke_test.py  _smoke_output.txt  _test_out.txt  _test_out2.txt  _tmp_numbered.txt  data_steel_info.xlsx  output_latest.xlsx  output_latest_v2.xlsx  pyproject.toml  requirements.txt  run_stdout.txt  tmp_orders.xlsx
.venv310/: pyvenv.cfg
docs/: analysis_platform.md  architecture_analysis.md  architecture_refactor_plan.md  feasible_block_architecture.md  set_packing_architecture.md
examples/: basic_schedule.py  run_block_first_ab_experiment.py  run_block_first_param_sweep.py  run_cold_rolling_schedule.py  run_guarded_virtual_ab_experiment.py
outputs/: _tmp_block_first_diag2_20260422_202917.xlsx  _tmp_block_first_diag3_20260422_202951.xlsx  _tmp_block_first_diag_20260422_202833.csv  _tmp_block_first_diag_20260422_202833.xlsx  _tmp_diag_extract2_20260422_210856.xlsx  _tmp_diag_extract_20260422_210831.csv  _tmp_diag_extract_20260422_210831.xlsx  check_fix_drop.csv  check_fix_drop.xlsx  check_material_id.csv  check_material_id.xlsx  check_rules.csv  check_rules.xlsx  check_summary_latest.csv  check_summary_latest.xlsx  check_temp_hard.csv  check_temp_hard.xlsx  check_virtual_rules.csv  check_virtual_rules.xlsx  check_virtual_seq.csv  check_virtual_seq.xlsx  cold_rolling_schedule_result.csv  cold_rolling_schedule_result.xlsx  output_campaign_check.csv  output_campaign_check.xlsx  output_campaign_hard_check.csv  output_campaign_hard_check.xlsx  output_cn_sheets_preview.csv  (+29 more)
(+138 files in other folders)
